--- a/cloud-storage/googledrive/impl/pom.xml
+++ b/cloud-storage/googledrive/impl/pom.xml
@@ -64,6 +64,19 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
         </dependency>
+        <!-- Unit Testing -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+        </dependency>
         <!--Other Dependencies-->
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -99,6 +112,7 @@
                 </includes>
             </resource>
         </resources>
+        <testSourceDirectory>src/test/java</testSourceDirectory>
     </build>
 
 </project>
